mule-fundamentals/v/3.7/deploying-mule-applications.adoc
= Deploying Mule Applications 
:keywords: cloudhub, studio, amc, server, test, deploy, applications

Depending upon the setup and demands of your production environment, there are numerous ways of deploying Mule applications. This document offers a brief overview of some of the ways you can deploy your Mule applications from Anypoint Studio.

. Deploy to the Studio embedded test server.
. Deploy to an enterprise server.
. Publish to the Mule Management Console Application Repository.
. Deploy to the Anypoint Platform.

== Prerequisites

* link:https://www.mulesoft.com/ty/dl/studio[Download and install Anypoint Studio].
* link:https://developer.mulesoft.com/anypoint-platform[If needed, install Mule Community Edition].
* link:https://www.mulesoft.com/ty/dl/mule[Download and install Mule Enterprise Server].
* link:https://www.mulesoft.com/dl/mmc[Download and install MMC].

== Deploy on the Studio Embedded Test Server

To test your application, run it locally on the *Mule server embedded in Studio*. Bundled with Anypoint Studio, the embedded Mule test server can run for up to 12 hours before it must be restarted.

image:deploy_embedded.png[deploy_embedded]

When you specify *Run As* > *Mule Application*, Studio automatically builds and deploys your application to the internal Mule server, which starts automatically, if necessary.

. In the *Package Explorer*, right-click your project’s name, then select *Run As* > *Mule Application*.
. Studio runs the application on the embedded Mule test server. (Unless you stop it, Studio runs the application for a period of 12 hours.) View the application’s activities in the Studio console.
. To stop the application from running, click the red, terminate button at the top edge of the console.

image:terminate_button2.png[terminate_button2]

== Deploy on an Enterprise Server

Export the Studio application to a zip file, then deploy it on an *Enterprise Server*. This approach is ideal for Mule servers in production environments. The zip file contains all the resources (such as code libraries and application metadata) necessary to run the application, and import it into Studio again for further development. You can use the Mule ESB as an enterprise server as described in link:/mule-user-guide/v/3.7/downloading-and-starting-mule-esb[Downloading and Starting Mule ESB].

image:deploy_server.png[deploy_server]

Deploying a Studio-built application in production on an Mule Enterprise server involves three steps:

. Export the application from Studio.
. Launch the Enterprise server.
. Deploy the application on the Enterprise server.

=== Exporting an Application from Studio

Studio lets you save a project as a Mule Deployable Archive (a zip file). Such a packaged Mule archive provides a convenient method for transferring files between editions of Studio or backing up Studio projects. The package includes all information specific to your application(s), including flows, configuration files, Java classes, referenced HTML files, and more.

. Right-click the project name in the *Package Explorer* pane, then select *Export*.
. In the *Export* wizard, click *Mule* to expand the associated node, select *Anypoint Studio Project to Mule Deployable Archive (includes Studio metadata)*, then click *Next*.
+
image:StudioExport-1.png[StudioExport-1]
+
. Select an output folder where you want to save your project archive, and click *Finish*.

=== Launching the Enterprise Server

. If you do not already have *Mule ESB Enterprise Standalone* installed on your system, download the link:https://www.mulesoft.com/ty/dl/mule[Mule ESB Enterprise Runtime trial].
. Start Mule.

[TIP]
====
*Need more detail?*

. Open a new command line.
*Windows*: Open the *Console*.
*Mac*: Open the *Terminal* application (Applications > Utilities > Terminal).
. Access the directory and folder where you unpacked Mule Standalone (the application folder in Mule). For example, type `cd /Users/me/Downloads/mule-enterprise-standalone-3.n.n/` - Where n.n is the latest Mule version
. Start Mule. For example, type `./bin/mule`
====

=== Deploying an Application on the Enterprise Server

. Navigate to the folder on your local drive into which saved your archived Studio application, then copy the zip file.
. Navigate to the folder that contains your copy of *Mule ESB Standalone*, then paste the application’s zip file into the `apps` folder.
. Mule polls the `apps` folder every 5 seconds (every 5000ms); it picks up the application you copied to the `apps` folder, then extracts and deploys it automatically. In the command line, Mule notifies you that it has deployed the application.
+
[source,code,linenums]
----
 *** - - + APPLICATION + - -
 * - - + STATUS + - - ** my_first_application
 * DEPLOYED           ** default
 * DEPLOYED
 ***INFO  2016-01-05 15:40:57,516 [WrapperListener_start_runner]
 org.mule.module.launcher.DeploymentService:
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 Mule is up and kicking
 (every 5000ms)
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
----
+
. If you wish to undeploy your application but keep Mule ESB running, navigate to the `app` directory and delete the file `your_application.txt`. This removes your application from the `/app` directory.
. To stop Mule ESB from running in the command line, hit *CTRL-C*.


== Deploy to The Anypoint Platform

Deploy the application to the *Anypoint Platform*, Mule’s platform for cloud-based integration. The Anypoint Platform represents the least painful approach for fast, worry-free cloud-to-cloud and cloud-to-on-premises deployment. 

image:deploy_cloudhub.png[deploy_cloudhub]

The Anypoint Platform includes the Runtime Manager, which can deploy manage and monitor applications running in the cloud and on-premises. CloudHub, which takes care of the backend of cloud applications, is a full integration Platform as a Service (iPaaS). It provides a convenient way for developers to launch their applications on a cloud platform, while also providing many enhanced features for solving cloud-to-cloud and cloud-to-premise integration problems. Anypoint Studio is fully integrated with Runtime Manager and facilitates simple application deployment.

Deploying a Studio-built application to the Anypoint Platform involves three steps:

. Create an Anypoint Platform account.
. If you wish to deploy to the cloud, you must adapt your Studio application to CloudHub.
. Deploy your Studio application.

=== Creating an Anypoint Platform account

You manage and deploy applications in CloudHub and on-premises via the link:/runtime-manager[Runtime Manager]. You access Runtime Manager via the link:https://anypoint.mulesoft.com[Anypoint Platform], if you don't have an account, you can easily create a new one. 

=== Adapting an Application for CloudHub

[NOTE]
These steps are only relevant for applications that are meant for deploying to a CloudHub server.

Many projects can be deployed directly to CloudHub. However, some projects require minor modifications, as summarized below.

* If you are deploying a project that listens on a *static port*, you need to change the port to a dynamic value so that CloudHub can set it at deployment time. To do so, change your port values to `${http.port`} or `${https.port`}. You can create an `application.properties` file that allows you to run your project locally on a specific port and also on CloudHub as a dynamic port. See the example link:/runtime-manager/hello-world-on-cloudhub[Hello World on CloudHub] for details on how to create this file.
* If using the *Jetty* connector, set the host to `0.0.0.0` instead of `localhost`.

[TIP]
See link:/runtime-manager/cloudhub-and-mule[CloudHub and Mule] and link:/runtime-manager/developing-a-cloudhub-application[Developing a CloudHub application] for more details on adapting an application to CloudHub.

=== Deploying an Application to the Anypoint Platform

See link:/runtime-manager/deploying-to-cloudhub[Deploying to CloudHub] or link:/runtime-manager/deploying-to-your-own-servers[Deploying to Your Own Servers] for instructions on how to deploy through the Anypoint Platform UI. You can also deploy to CloudHub directly from the Studio IDE.

. In Studio, right-click the project name in the *Package Explorer* pane, then select *Deploy to Anypoint Platform*.
. You are prompted to enter your Anypoint Platform login credentials. Then a menu will open where you must select an Environment and sub organization to deploy to, a domain in which to deploy your application, the runtime to deploy to, etc. If deploying to the cloud, the domain name you enter must be a unique sub-domain which CloudHub creates for your application on the cloudhub.io domain such as, `My-Project-Name`. CloudHub automatically checks the availability of the sub-domain, then displays a checkmark icon to confirm that your entry is unique.
+
image:deploy-from-studio.jpg[deploy-from-studio]
+
. Click *Finish* to deploy your application to the Anypoint Platform.
. In your Web browser, access your Runtime Manager console in the Anypoint Platform to view your newly deployed application.

== Sharing Resources

If you're deploying multiple applications to the same server or servers (except for CloudHub), in whichever of the ways explained above, and those applications could share the same resources, then you can create a common *domain* where you can define common configurations that can then be referenced by multiple projects. This allows you to, for example, expose different services in different projects through the same HTTP host and port and be able to deploy everything without any conflicts. link:/mule-user-guide/v/3.7/shared-resources[Read More].

== Publish to the Mule Management Console Application Repository

You can publish the application to the *Application Repository* in the *Mule Management Console*. Once in the repository, the application can be deployed from the repository to multiple Mule server instances, and even to multi-node Mule *clusters*. link:https://www.mulesoft.com/dl/mmc[Download and install MMC].

image:deploy_mmc.png[deploy_mmc]

Once in the repository, the application can be deployed from the Repository to multiple Mule server instances and even to multi-node high-availability clusters. To publish an application to the management console’s app repo, you must first download, then install and set-up Mule ESB Standalone with Mule Management Console. Access the management console’s link:/mule-management-console/v/3.7/mmc-walkthrough[Walkthrough] to set up a console environment, then complete the following steps to publish your Studio application to its application repository.

. In Studio, right-click the project name in the *Package Explorer* pane, then select *Deploy to Anypoint Platform* > *Mule Management Console*.
. In the publication wizard, input a value for each of the fields to specify the location, login credentials of your management console, and settings for your application.
. Click *Finish* to publish the app to the repository.
. Follow the directions in the management console link:/mule-management-console/v/3.7/mmc-walkthrough[Walkthrough] to deploy your application to the Mule server (or cluster of servers).


== See Also

* *NEXT STEP:* Learn about how to link:/mule-fundamentals/v/3.7/mule-security[secure] your Mule application.
* Learn more about the link:/mule-management-console/v/3.7[Mule Management Console].
* Learn more about link:/runtime-manager/cloudhub[CloudHub].
* Learn how to deploy multiple applications that link:/mule-user-guide/v/3.7/shared-resources[Shared Resources] through any of these methods.
* link:https://developer.mulesoft.com/anypoint-platform[Mule Community Edition]
* link:https://www.mulesoft.com/platform/studio[Anypoint Studio]
* link:http://forums.mulesoft.com[MuleSoft's Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
